# RLCSWrapper

./: .gitignore  GITHUB_SETUP.md  README.md  copy_rl_libraries.ps1  copy_rl_libraries.sh
.cursor/: BUILD_GUIDE.md  COLLISION_FREE_TRAJECTORY_EXPLANATION.md  INTEGRATION_GUIDE.md  RLWRAPPER_USAGE_GUIDE.md  TEST_EXECUTION_GUIDE.md  TEST_QUICK_REFERENCE.md
.cursor/plans/: c#_.net_10_rl_library_wrapper_86d2b74a.plan.md
Documentation/: API.md  INTEROPERABILITY.md  README.md
RLCSWrapper.Core/: RLCSWrapper.Core.csproj  RLWrapper.cs  TrajectoryPlanner.cs
RLCSWrapper.Core/Exceptions/: PlanningException.cs
RLCSWrapper.Core/Models/: InitializationRequest.cs  PlannerType.cs  PlanningRequest.cs  PlanningResult.cs
RLCSWrapper.Test/: Program.cs  RLCSWrapper.Test.csproj  test_plan.xml
RLTrajectoryPlanner.Core/: RLTrajectoryPlanner.Core.csproj  RLWrapper.cs  TrajectoryPlanner.cs
RLTrajectoryPlanner.Core/Exceptions/: PlanningException.cs
RLTrajectoryPlanner.Core/Models/: InitializationRequest.cs  PlannerType.cs  PlanningRequest.cs  PlanningResult.cs
RLTrajectoryPlanner.Test/: Program.cs  RLTrajectoryPlanner.Test.csproj
RLWrapper/: CMakeLists.txt  RLWrapper.cpp  RLWrapper.h  build_rlwrapper.bat  build_rlwrapper.ps1
RLlib/: README.md  copy_rl_libraries.bat  copy_rl_libraries.ps1  copy_rl_libraries.sh
